--- a/MovieApp/View/Base.lproj/Main.storyboard
+++ b/MovieApp/View/Base.lproj/Main.storyboard
@@ -125,29 +125,26 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="710-de-QyY">
-                                    <size key="itemSize" width="222" height="240"/>
+                                    <size key="itemSize" width="286" height="373"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="MovieCollectionViewCell" id="sFv-ai-5VQ" customClass="MovieCollectionViewCell" customModule="MovieApp" customModuleProvider="target">
-                                        <rect key="frame" x="64" y="0.0" width="222" height="240"/>
+                                        <rect key="frame" x="32" y="0.0" width="286" height="373"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="V1p-Vw-wKF">
-                                            <rect key="frame" x="0.0" y="0.0" width="222" height="240"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="286" height="373"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XHx-zC-s7m">
-                                                    <rect key="frame" x="10" y="10" width="202" height="167.33333333333334"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XHx-zC-s7m">
+                                                    <rect key="frame" x="10" y="10" width="266" height="310.33333333333331"/>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2u-gV-0We">
-                                                    <rect key="frame" x="10" y="187.33333333333334" width="202" height="42.666666666666657"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Movie Name" titleAlignment="leading">
-                                                        <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
-                                                        <color key="baseForegroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </buttonConfiguration>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T2u-gV-0We">
+                                                    <rect key="frame" x="0.0" y="0.0" width="276" height="373"/>
+                                                    <color key="tintColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <buttonConfiguration key="configuration" style="plain" title="dfd" subtitle=""/>
                                                     <connections>
                                                         <action selector="detailButtonTapped:" destination="Hes-26-SXI" eventType="touchUpInside" id="9dR-fd-ruy"/>
                                                         <segue destination="Vzh-0E-kKG" kind="showDetail" identifier="toDetail" id="EnJ-Al-BaV"/>
@@ -155,15 +152,16 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="T2u-gV-0We" firstAttribute="top" secondItem="XHx-zC-s7m" secondAttribute="bottom" constant="10" id="b7C-2A-aYe"/>
-                                                <constraint firstAttribute="bottom" secondItem="T2u-gV-0We" secondAttribute="bottom" constant="10" id="ich-TC-pPk"/>
+                                                <constraint firstItem="T2u-gV-0We" firstAttribute="top" secondItem="V1p-Vw-wKF" secondAttribute="top" id="CrX-Ed-98U"/>
+                                                <constraint firstAttribute="bottom" secondItem="T2u-gV-0We" secondAttribute="bottom" id="ich-TC-pPk"/>
                                                 <constraint firstItem="XHx-zC-s7m" firstAttribute="leading" secondItem="V1p-Vw-wKF" secondAttribute="leading" constant="10" id="nNC-Ph-RVB"/>
                                                 <constraint firstAttribute="trailing" secondItem="T2u-gV-0We" secondAttribute="trailing" constant="10" id="q6y-Is-KYv"/>
-                                                <constraint firstItem="T2u-gV-0We" firstAttribute="leading" secondItem="V1p-Vw-wKF" secondAttribute="leading" constant="10" id="qCi-AM-wQq"/>
+                                                <constraint firstItem="T2u-gV-0We" firstAttribute="leading" secondItem="V1p-Vw-wKF" secondAttribute="leading" id="qCi-AM-wQq"/>
                                                 <constraint firstAttribute="trailing" secondItem="XHx-zC-s7m" secondAttribute="trailing" constant="10" id="t1h-JQ-2Pv"/>
                                                 <constraint firstItem="XHx-zC-s7m" firstAttribute="top" secondItem="V1p-Vw-wKF" secondAttribute="top" constant="10" id="yxc-53-RhF"/>
                                             </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="286" height="373"/>
                                         <connections>
                                             <outlet property="movieImageView" destination="XHx-zC-s7m" id="5GY-xl-NRg"/>
                                             <outlet property="movieLabelButton" destination="T2u-gV-0We" id="Znu-ti-Yqq"/>
